<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="@drawable/background">
	
	<LinearLayout
        android:id="@+id/TopLiearLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        
        <ImageView
        	android:id="@+id/image"
        	android:src="@drawable/no_image"
        	android:layout_margin="10dp"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"/>
        
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/progress_bar_layout"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#80000000"
        android:visibility="invisible">
        
        <LinearLayout 
        	android:layout_height="wrap_content" 
        	android:layout_width="fill_parent"
        	android:gravity="right"
        	android:layout_weight="1">
        	
		    <ProgressBar 
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
				android:paddingRight="1dp"
				android:layout_gravity="right" />	
					
		</LinearLayout>
		
		<LinearLayout 
        	android:layout_height="wrap_content" 
        	android:layout_width="fill_parent"
        	android:layout_gravity="bottom"
        	android:layout_weight="1">	
        	
			<TextView 
				android:layout_height="fill_parent"
	            android:layout_width="fill_parent"
	            android:text="@string/loading"
	            android:paddingLeft="5dp"
	            android:textSize="15px"
	            android:textColor="#808080"/>
        </LinearLayout>
	</LinearLayout>	 

    <LinearLayout
        android:id="@+id/BottomLiearLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
     
     	<Button 
        	android:text="@string/search" 
            android:id="@+id/search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/search_search"
            android:textStyle="bold"
            android:textSize="15dp"
            android:typeface="sans"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="10dp"
            android:onClick="search"
            android:background="#40ffffff"/>
       
       
        <Button
            android:text="@string/save" 
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/search_save"
            android:textStyle="bold"
            android:textSize="15dp"
            android:typeface="sans"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="10dp"
            android:onClick="save"
            android:background="#40ffffff"/>
            
        <Button
            android:text="@string/cancel" 
            android:id="@+id/load_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/search_cancel"
            android:textStyle="bold"
            android:textSize="15dp"
            android:typeface="sans"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="10dp"
            android:onClick="cancel"
            android:background="#40ffffff"/>
		
    </LinearLayout>
    
    
</RelativeLayout>