<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="@drawable/background">
	
	
	<LinearLayout
        android:id="@+id/TopLinearLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true">
        
        <TextView
	        	android:id="@+id/title"
	        	android:text="Title"
	        	android:textColor="#330000"
	        	android:layout_margin="2dp"
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:background="#40ffffff"/>
	        	
	        <TextView
	        	android:id="@+id/author"
	        	android:text="Author"
	        	android:textColor="#330000"
	        	android:layout_margin="2dp"
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:background="#40ffffff"/>
	        	
    </LinearLayout>
	
	<LinearLayout
        android:id="@+id/ImageLiearLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TopLinearLayout"
        android:layout_weight="1">
        
        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="2dp"
		    android:background="@drawable/bg_image">
        
	        <ImageView
	        	android:id="@+id/image"
	        	android:src="@drawable/no_image"
	        	android:layout_width="120dp"
	        	android:scaleType="fitXY"
	        	android:layout_height="160dp"/>"
        
        </LinearLayout>
        
        <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">
	        	
	        <TextView
	        	android:id="@+id/price"
	        	android:text="Price"
	        	android:textColor="#330000"
	        	android:layout_margin="2dp"
	        	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:background="#40ffffff"/>
	        
	        <LinearLayout
		        android:id="@+id/RatingLiearLayout"
		        android:orientation="horizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="2dp"
		        android:background="#40ffffff">
		        
		        <TextView
	        	android:id="@+id/text_rating"
	        	android:text="Rate"
	        	android:textColor="#330000"
	        	android:layout_margin="2dp"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"/>
	        	
		        <RatingBar 
		        	android:id="@+id/rating_bar"
		        	android:stepSize="0.5"
		        	android:numStars="10"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_marginTop="4dp"
		        	android:layout_marginLeft="2dp"
		        	android:progress="45"
		        	style="?android:attr/ratingBarStyleSmall"/>
		        	
		  	</LinearLayout>
        
        </LinearLayout>
        
        
    </LinearLayout>	 
	
	<LinearLayout 
		android:id="@+id/info_layout"
		android:layout_below="@+id/ImageLinearLayout"
		android:layout_above="@+id/BottomLinearLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView
	        	android:id="@+id/info"
	        	android:text="Info"
	        	android:textColor="#330000"
	        	android:layout_margin="2dp"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:background="#40ffffff"/>
	</LinearLayout>
	
	
	<LinearLayout
        android:id="@+id/progress_bar_layout"
        android:layout_centerVertical="true"
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#80000000"
        android:visibility="invisible">
        
        <LinearLayout 
        	android:layout_height="wrap_content" 
        	android:layout_width="fill_parent"
        	android:gravity="right"
        	android:layout_weight="1">
        	
		    <ProgressBar 
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
				android:paddingRight="1dp"
				android:layout_gravity="right" />	
					
		</LinearLayout>
		
		<LinearLayout 
        	android:layout_height="wrap_content" 
        	android:layout_width="fill_parent"
        	android:layout_gravity="bottom"
        	android:layout_weight="1">	
        	
			<TextView 
				android:layout_height="fill_parent"
	            android:layout_width="fill_parent"
	            android:text="@string/loading"
	            android:paddingLeft="5dp"
	            android:textSize="15px"
	            android:textColor="#808080"/>
        </LinearLayout>
	</LinearLayout>	 
	
	
    <LinearLayout
        android:id="@+id/BottomLinearLayout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
     
     	<Button 
     		android:id="@+id/rate"
        	android:text="@string/rate" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/item_result_rate"
            android:textSize="10dp"
            android:typeface="sans"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="10dp"
            android:onClick="rate"
            android:background="#40ffffff"/>
       
       
        <Button
        	android:id="@+id/similar"
            android:text="@string/similar" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/item_result_similar"
            android:textSize="10dp"
            android:typeface="sans"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="10dp"
            android:onClick="findSimilar"
            android:background="#40ffffff"/>
            
        <Button
        	android:id="@+id/buy"
            android:text="@string/buy" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/item_result_buy"
            android:textSize="10dp"
            android:typeface="sans"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="10dp"
            android:onClick="buy"
            android:background="#40ffffff"/>
            
        <Button
        	android:id="@+id/storage"
            android:text="@string/save_book" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/item_result_save"
            android:textSize="10dp"
            android:typeface="sans"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="10dp"
            android:onClick="storage"
            android:background="#40ffffff"/>
		
    </LinearLayout>
    
    
</RelativeLayout>